# EndeavorHumanoid

./: .gitignore  .gitmodules  LICENSE  README.md
code_esp32/esp32_controller_dynamic/: config.h  esp32_controller_dynamic.ino  kinematics.h  motion.ino  movesets.h  servo2040.h
code_servo2040/binaries/: servo2040_client_imu.uf2
code_servo2040/servo2040_client_imu/: servo2040_client.cpp  servo2040_client_imu.hpp
docs/: STARTHERE.md
esp32_basic_controller/: esp32_basic_controller.ino  main.h
esp32_controller/: config.h  imu.ino  motion.ino  servo2040.h
esp32_controller_imu/: esp32_controller_imu.ino  main.h
jupyter notebook/: ik_generator.ipynb
legacy/esp32_controller_imu/: esp32_controller_imu.ino  main.h
servo2040_client/: CMakeLists.txt  main.hpp  servo2040_client.cpp  servo2040_client_imu.cpp
servo2040_client/binaries/: servo2040_client.uf2
servo2040_client_imu/: CMakeLists.txt  servo2040_client_imu.cpp  servo2040_client_imu.hpp
servo2040_peripheral/: CMakeLists.txt  main.hpp  servo2040_peripheral.cpp
servo_calibration/: README.md  ServoCalibrationJig.step  ServoDial.stl  ServoMount.stl  servo_calibration.ino
